# pbl_project

./: 02-02_기준하네스_작물선정_v2.9.md  AGENTS.md
00_공통/: 01_시나리오선정기준_압축하네스.md  (+3 more)
Self_Working_pipeline/: .env.example  .gitignore  README.md  launch_hermes_gui.bat  pyproject.toml
Self_Working_pipeline/.claude/: settings.local.json
Self_Working_pipeline/apps/cli/: main.py
Self_Working_pipeline/apps/gui/: main.py
Self_Working_pipeline/contracts/: __init__.py  models.py
Self_Working_pipeline/core/: prompting.py  secret_scanner.py  serialization.py  settings.py  state_machine.py
Self_Working_pipeline/docs/: command-guide-ko.md  harness_mini_pipeline_design.md  multi_agent_design_adoption_guide.md  overview.md  research_runtime_guidance_v29lite.md  self_working_pipeline_modification_proposal.md
Self_Working_pipeline/services/adapters/: anthropic_adapter.py  base.py  openai_adapter.py
Self_Working_pipeline/services/cross_verifier/: __init__.py  service.py
Self_Working_pipeline/services/executor/: service.py
Self_Working_pipeline/services/memory/: db.py  models.py  service.py
Self_Working_pipeline/services/notifier/: service.py
Self_Working_pipeline/services/orchestrator/: service.py
Self_Working_pipeline/tests/: __init__.py  helpers.py  test_anthropic_adapter.py  test_cli_inputs.py  test_executor_service.py  test_gui.py  test_memory_service.py  test_models.py  test_openai_adapter.py  test_orchestrator.py  test_planner.py  test_prompting.py  test_reviewer_service.py  test_secret_scanner.py  test_serialization.py  test_state_machine.py  test_testing_service.py
(+131 files in other folders)
