[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-auto-dev-pipeline"
version = "0.1.0"
description = "CLI-first multi-agent software delivery pipeline with Hermes orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.95.0",
  "openai>=1.109.1",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.0",
  "typer>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[project.scripts]
hermes-pipeline = "apps.cli.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["apps*", "contracts*", "core*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
